fixed issue with overflow on new Make Your own component. Also added a faded background image to the MoreInfo section.

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,6 +1,6 @@
-* {
-  margin:0;
-  /* background-color: #B31E6F; */
+.wrap {
+  width: 1000px;
+  margin: 0 auto;
 }
 
 .header {
